--- a/Python_learn.ipynb
+++ b/Python_learn.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNp6b6A8rLHENYTcMspAeUS",
+      "authorship_tag": "ABX9TyOIqQv+EdyQ6Z8aktEdcR/u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -105,6 +105,36 @@
           "text": [
             "Enter the number :12\n",
             "Entered number is Even.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 5\n",
+        "y=\"eniac\"\n",
+        "z=9.07\n",
+        "print(type(x))\n",
+        "print(type(y))\n",
+        "print(type(z))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hmeB7Uma6Bmf",
+        "outputId": "d68aa607-31a4-4d45-d863-1cbf0a605f24"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'int'>\n",
+            "<class 'str'>\n",
+            "<class 'float'>\n"
           ]
         }
       ]
