--- a/Python_learn.ipynb
+++ b/Python_learn.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOIqQv+EdyQ6Z8aktEdcR/u",
+      "authorship_tag": "ABX9TyN82X6TY3oUPKbdu2LrfREl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,8 @@
       "execution_count": 2,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "rLkG7IfCexAv",
         "outputId": "d6222b07-ba73-4b88-a0ed-1d823fefb9c1"
@@ -64,7 +65,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "3VrkWL8o4n4L",
         "outputId": "7ff14668-ba03-4c4f-92c8-51d555aaab40"
@@ -84,6 +86,40 @@
     {
       "cell_type": "code",
       "source": [
+        "X,Y,Z=\"apple\",\"banana\",\"cucumber\"\n",
+        "print(X)\n",
+        "print(\"\\n\")\n",
+        "print(Y)\n",
+        "print(\"\\n\")\n",
+        "print(Z)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oI4UT7V47PJF",
+        "outputId": "58361f0b-bdfc-43ee-acf1-4e25e8d0c145"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "apple\n",
+            "\n",
+            "\n",
+            "banana\n",
+            "\n",
+            "\n",
+            "cucumber\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "A = int(input(\"Enter the number :\"))\n",
         "if A%2==0 :\n",
         "  print(\"Entered number is Even.\")\n",
@@ -92,7 +128,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "pgmfl2Vt5C_E",
         "outputId": "521426ac-966c-4346-a55e-ecf010d22102"
@@ -121,7 +158,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "hmeB7Uma6Bmf",
         "outputId": "d68aa607-31a4-4d45-d863-1cbf0a605f24"
@@ -138,6 +176,43 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X=\"eniac\"\n",
+        "def No():\n",
+        "  print(X)\n",
+        "No()\n",
+        "No()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Q8iD1HyG7xdr",
+        "outputId": "a3e76dab-e703-40bd-f5be-93710e40b57f"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "eniac\n",
+            "eniac\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "K7m6RpDn8R5D"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
